kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-${DEPLOYMENT}
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: node-react
        deployment: ${DEPLOYMENT}
    spec:
      containers:
      - name: node-react
        image: devfiap/node-react-app:${IMAGE_TAG}
        ports:
        - containerPort: 5000
        readinessProbe:
           tcpSocket:
              port: 5000
        initialDelaySeconds: 30
        periodSeconds: 5
