kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: ClusterIP
  selector:
    app: node-react 
    deployment: ${DEPLOYMENT}
  ports:
  - containerPort: 5000
    port: 80
