kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-loadbalancer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ${API_DNS}
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 80
